--- a/PracticaObjetos/Objetos2/Objetos2.csproj
+++ b/PracticaObjetos/Objetos2/Objetos2.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caja.cs" />
+    <Compile Include="Caja2.cs" />
+    <Compile Include="Humano.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
